@@ -82,7 +82,7 @@ public class HomeServiceImpl implements HomeDetailService {
 
 		return Stream.concat(lastsDecksAdded.stream(), lastSetCollections.stream())
 				.sorted(Comparator.comparing(LastAddedDTO::getRegisteredDate).reversed()).limit(10)
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	private Double totalDeckPrice(Long setId) {
